feat: add theme system with Neumorphism and Basic themes
- Create themeManager.js with theme definitions and switching logic
- Add Neumorphism theme (default) with dual shadows and cool grey palette
- Add Basic theme with simple styling and standard shadows
- Add Theme tab to settings dialog between Fonts and Language tabs
- Implement theme persistence in localStorage
- Initialize theme on app load (before fonts so fonts can override)
- Add theme switching with live preview and descriptions
- Support theme reset to defaults
- Add translations for theme tab (English and Chinese)

Themes are defined as CSS variable sets, making it easy to add new themes
in the future. User font preferences can still override theme fonts.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,6 +3,7 @@
     "title": "Settings",
     "tabs": {
       "fonts": "Fonts",
+      "theme": "Theme",
       "language": "Language"
     },
     "fonts": {
@@ -27,6 +28,11 @@
         "description": "Font size for selection info display in sidebar and popup (default: 13px)"
       },
       "preview": "Preview:"
+    },
+    "theme": {
+      "title": "Theme",
+      "description": "Choose your preferred design theme",
+      "selectLabel": "Theme:"
     },
     "language": {
       "title": "Language",
